# chatbot_rasa

./: .gitignore  README.md  start.md
rasa-for-beginners/: domain.yml  pyproject.toml  story_graph.dot
rasa-for-beginners/data/: nlu.yml  stories.yml
