[tool.poetry]
name = "rasa-for-beginners"
version = "0.1.0"
description = ""
authors = ["rumancha <rumancha12@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.7"
rasa = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
